# ktools

./: Cargo.toml  docker-compose.yaml
preset/: config.yaml  theme.toml
src/: config.rs  error.rs  event.rs  lib.rs  main.rs  term.rs
src/cli/: mod.rs
src/kafka/: client.rs  config.rs
src/schema_registry/: config.rs  mod.rs
src/ui/: mod.rs  theme.rs  utils.rs
