[package]
name = "ktools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.51"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
prost = "0.12"
prost-types = "0.12"
rdkafka = { version = "0.36", features = ["ssl", "sasl", "gssapi"] }
schema_registry_converter = { version = "4.0", features = [
    "easy",
    "futures",
    "avro",
    "proto_raw",
    "proto_decoder",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.30"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
similar = "2.4.0"
